Bug: Styled footer to fully align with right side of page, removing gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,6 +248,12 @@ body {
 
 .footer-signup p {
     color: #ffffff;
+    font-size: smaller;
+  
+}
+.footer-signup {
+    color: #ffffff;
+    margin-right: 1rem;
 }
 
 .footer-logo {
